Merge comparison documents into definitive COMPARISON.md
Combine best parts of both documents: architecture narrative and code examples
from Opus, detailed API/integration table and extra feature rows from Sonnet.
Fix factual errors: textPath, pattern, mask, filter are supported by JairoSVG;
EchoSVG minimum Java is 11 (not 8); CSS nesting is not supported by EchoSVG.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>